--- a/BulkyBook.Web/Areas/Customer/Views/Home/Index.cshtml
+++ b/BulkyBook.Web/Areas/Customer/Views/Home/Index.cshtml
@@ -2,7 +2,49 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@model IEnumerable<Product>
+
+<div class="row pb-3">
+
+    @foreach (var item in Model)
+    {
+        <div class="card" style="width: 18rem;">
+            <img src="@item.ImageUrl" class="card-img-top rounded img-thumbnail" style="max-height: 320px;" />
+            <div class="card-body">
+                <p class="card-title h5 text-dark">@item.Title</p>
+                <p class="card-title text-info">by <b>@item.Author</b></p>
+                <div>
+                    <a asp-action="Details" class="btn btn-primary form-control" asp-route-productId="@item.Id">
+                        Details
+                    </a>
+                </div>
+            </div>
+        </div>
+        @*<div class="col-lg-3 col-md-6">
+            <div class="row p-2">
+            <div class="col-12 p-1" style="border:1px solid #008cba; border-radius: 5px;">
+            <div class="card">
+            <img src="@item.ImageUrl" class="card-img-top rounded" />
+            <div class="card-body">
+            <div class="pl-1">
+            <p class="card-title h5 text-primary">@item.Title</p>
+            <p class="card-title text-info">by <b>@item.Author</b></p>
+            </div>
+            <div class="pl-1">
+            <p>List Price: <strike><b>$@item.ListPrice.ToString("0.00")</b></strike></p>
+            </div>
+            <div class="pl-1">
+            <p>As low as: <b>$@item.PriceFor10.ToString("0.00")</b></p>
+            </div>
+            </div>
+            </div>
+            <div>
+            <a asp-action="Details" class="btn btn-primary form-control" asp-route-productId="@item.Id">
+            Details
+            </a>
+            </div>
+            </div>
+            </div>
+            </div>*@
+    }
 </div>
