--- a/BulkyBook.Web/Areas/Customer/Views/Home/Index.cshtml
+++ b/BulkyBook.Web/Areas/Customer/Views/Home/Index.cshtml
@@ -8,16 +8,16 @@
 
     @foreach (var item in Model)
     {
-        <div class="card" style="width: 18rem;">
-            <img src="@item.ImageUrl" class="card-img-top rounded img-thumbnail" style="max-height: 320px;" />
+        <div class="card" style="width: 16rem; margin:1em">
+            <img src="@item.ImageUrl" class="card-img-top rounded img-thumbnail" style="max-height: 220px; object-fit: scale-down" />
             <div class="card-body">
-                <p class="card-title h5 text-dark">@item.Title</p>
-                <p class="card-title text-info">by <b>@item.Author</b></p>
-                <div>
-                    <a asp-action="Details" class="btn btn-primary form-control" asp-route-productId="@item.Id">
-                        Details
-                    </a>
-                </div>
+                <p class="card-title h6 text-dark" style="font-size:1em; font-weight: 700">@item.Title</p>
+                <p class="card-title text-info" style="font-size:0.9em; font-weight: 700">by <b>@item.Author</b></p>
+            </div>
+            <div class="card-footer">
+                <a asp-action="Details" class="btn btn-dark form-control" asp-route-productId="@item.Id">
+                    Details
+                </a>
             </div>
         </div>
         @*<div class="col-lg-3 col-md-6">
