--- a/BulkyBook.Web/Views/Shared/_Notification.cshtml
+++ b/BulkyBook.Web/Views/Shared/_Notification.cshtml
@@ -3,15 +3,15 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script type="text/javascript">
-        toastr.success('@TempData["success"]')
+        toastr.success('@TempData["success"]');
     </script>
 }
-
 @if (TempData["error"] != null)
 {
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script type="text/javascript">
-        toastr.success('@TempData["error"]')
+        toastr.error('@TempData["error"]');
     </script>
 }
+
